Implemented simple service logic for example project Also implemented data generation that runs on startup. Next step: Pass data to API.

--- a/example/application/src/main/resources/application.properties
+++ b/example/application/src/main/resources/application.properties
@@ -14,6 +14,7 @@ spring.servlet.multipart.max-request-size=10MB
 # See: https://www.bezkoder.com/jpa-entitymanager-spring-boot/
 spring.jpa.open-in-view=false
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
 # See: https://stackoverflow.com/a/74587796
 logging.level.org.hibernate=info
@@ -27,15 +28,15 @@ logging.level.org.hibernate.SQL_SLOW=info
 logging.level.org.hibernate.cache=debug
 
 # Datasource - Show
-spring.datasource-whitelabel.jdbcUrl=jdbc:h2:mem:show
-spring.datasource-whitelabel.username=sa
-spring.datasource-whitelabel.password=password
-spring.datasource-whitelabel.driver-class-name=org.h2.Driver
+spring.datasource-show.jdbcUrl=jdbc:h2:mem:show
+spring.datasource-show.username=sa
+spring.datasource-show.password=password
+spring.datasource-show.driver-class-name=org.h2.Driver
 # Datasource - Organisation
-spring.datasource-order.jdbcUrl=jdbc:h2:mem:organisation
-spring.datasource-order.username=sa
-spring.datasource-order.password=password
-spring.datasource-order.driver-class-name=org.h2.Driver
+spring.datasource-organisation.jdbcUrl=jdbc:h2:mem:organisation
+spring.datasource-organisation.username=sa
+spring.datasource-organisation.password=password
+spring.datasource-organisation.driver-class-name=org.h2.Driver
 
 # H2 Config
 spring.h2.console.enabled=true
