--- a/example/application/src/main/resources/application.properties
+++ b/example/application/src/main/resources/application.properties
@@ -27,11 +27,11 @@ logging.level.org.hibernate.SQL_SLOW=info
 # 2nd Level Cache
 logging.level.org.hibernate.cache=debug
 
-# Datasource - Show
-spring.datasource-show.jdbcUrl=jdbc:h2:mem:show
-spring.datasource-show.username=sa
-spring.datasource-show.password=password
-spring.datasource-show.driver-class-name=org.h2.Driver
+# Datasource - Media
+spring.datasource-media.jdbcUrl=jdbc:h2:mem:media
+spring.datasource-media.username=sa
+spring.datasource-media.password=password
+spring.datasource-media.driver-class-name=org.h2.Driver
 # Datasource - Organisation
 spring.datasource-organisation.jdbcUrl=jdbc:h2:mem:organisation
 spring.datasource-organisation.username=sa
