--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -71,6 +71,7 @@ jakarta-mail-api = { group = "jakarta.mail", name = "jakarta.mail-api", version 
 jakarta-mail = { group = "com.sun.mail", name = "jakarta.mail", version = "2.0.1" }
 ksp-plugin = { group = "com.google.devtools.ksp", name = "com.google.devtools.ksp.gradle.plugin", version.ref = "ksp-base" }
 ksp-api = { group = "com.google.devtools.ksp", name = "symbol-processing-api", version.ref = "ksp-base" }
+kotlin-poet = { group = "com.squareup", name = "kotlinpoet-ksp", version = "1.14.2"}
 
 [plugins]
 kotlinter = { id = "org.jmailen.kotlinter", version = "3.13.0" }
