--- a/.github/workflows/github-actions.yaml
+++ b/.github/workflows/github-actions.yaml
@@ -1,18 +1,23 @@
 name: Build, Test & Publish
-on: [push]
+on:
+  push:
+    tags:
+      - '*'
+    branches:
+      - '**'
 jobs:
-  Build-Test-Publish:
+  Build-Test:
     runs-on: ubuntu-latest
+    if: "!startsWith(github.ref, 'refs/tags/')"
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      #- name: Remove -SNAPSHOT suffix from bee-built version
-      #  run: sed -i '/bee-built/ s/-SNAPSHOT//g' ./gradle/libs.versions.toml
       - name: Setup Java
         uses: actions/setup-java@v3
         with:
           java-version: '17'
           distribution: 'adopt'
+          cache: 'gradle'
       - name: Make gradlew executable
         run: |
           chmod +x ./bee.persistent/gradlew
@@ -44,4 +49,81 @@ jobs:
         working-directory: ./example/application
         run: ./gradlew build
 
+  Build-Test-Publish:
+    runs-on: ubuntu-latest
+    if: "startsWith(github.ref, 'refs/tags/')"
+    env:
+      JRELEASER_NEXUS2_USERNAME: ${{ secrets.JRELEASER_NEXUS2_USERNAME }}
+      JRELEASER_NEXUS2_PASSWORD: ${{ secrets.JRELEASER_NEXUS2_PASSWORD }}
+      JRELEASER_GPG_PASSPHRASE: ${{ secrets.JRELEASER_GPG_PASSPHRASE }}
+      JRELEASER_GPG_SECRET_KEY: ${{ secrets.JRELEASER_GPG_SECRET_KEY }}
+      JRELEASER_GPG_PUBLIC_KEY: ${{ secrets.JRELEASER_GPG_PUBLIC_KEY }}
+      JRELEASER_GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Remove -SNAPSHOT suffix from bee-built version
+        run: sed -i '/bee-built/ s/-SNAPSHOT//g' ./gradle/libs.versions.toml
+      - name: Setup Java
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'adopt'
+          cache: 'gradle'
+      - name: Make gradlew executable
+        run: |
+          chmod +x ./bee.persistent/gradlew
+          chmod +x ./bee.functional/gradlew
+          chmod +x ./bee.buzz/gradlew
+          chmod +x ./bee.generative/gradlew
+          chmod +x ./bee.fetched/gradlew
+          chmod +x ./bee.fetched.test/gradlew
+          chmod +x ./example/application/gradlew
+      - name: Build & Test bee.persistent
+        working-directory: ./bee.persistent
+        run: ./gradlew build
+      - name: Build & Test bee.functional
+        working-directory: ./bee.functional
+        run: ./gradlew build
+      - name: Build & Test bee.buzz
+        working-directory: ./bee.buzz
+        run: ./gradlew build
+      - name: Build & Test bee.generative
+        working-directory: ./bee.generative
+        run: ./gradlew build
+      - name: Build & Test bee.fetched
+        run: |
+          cd ./bee.fetched/
+          ./gradlew build
+          cd ../bee.fetched.test/
+          ./gradlew build
+      - name: Build & Test example application
+        working-directory: ./example/application
+        run: ./gradlew build
+
+      - name: Publish bee.persistent
+        working-directory: ./bee.persistent
+        run: |
+          ./gradlew publish
+          ./gradlew jreleaserDeploy
+      - name: Publish bee.functional
+        working-directory: ./bee.functional
+        run: |
+          ./gradlew publish
+          ./gradlew jreleaserDeploy
+      - name: Publish bee.buzz
+        working-directory: ./bee.buzz
+        run: |
+          ./gradlew publish
+          ./gradlew jreleaserDeploy
+      - name: Publish bee.generative
+        working-directory: ./bee.generative
+        run: |
+          ./gradlew publish
+          ./gradlew jreleaserDeploy
+      - name: Publish bee.fetched
+        working-directory: ./bee.fetched
+        run: |
+          ./gradlew publish
+          ./gradlew jreleaserDeploy  
           
