Tested configuring multiple data sources for blaze persistence Seems to be working now, was quite a hassle because of the single autoconfiguration from `@EnableEntityViews`.

--- a/bee.persistent.test/src/main/resources/application.properties
+++ b/bee.persistent.test/src/main/resources/application.properties
@@ -27,16 +27,16 @@ logging.level.org.hibernate.SQL_SLOW=info
 # 2nd Level Cache
 logging.level.org.hibernate.cache=debug
 
-# Datasource - Media
-spring.datasource-media.jdbcUrl=jdbc:h2:mem:media
-spring.datasource-media.username=sa
-spring.datasource-media.password=password
-spring.datasource-media.driver-class-name=org.h2.Driver
-# Datasource - Organisation
-spring.datasource-organisation.jdbcUrl=jdbc:h2:mem:organisation
-spring.datasource-organisation.username=sa
-spring.datasource-organisation.password=password
-spring.datasource-organisation.driver-class-name=org.h2.Driver
+# Datasource - A
+spring.datasource-a.jdbcUrl=jdbc:h2:mem:a
+spring.datasource-a.username=sa
+spring.datasource-a.password=password
+spring.datasource-a.driver-class-name=org.h2.Driver
+# Datasource - B
+spring.datasource-b.jdbcUrl=jdbc:h2:mem:b
+spring.datasource-b.username=sa
+spring.datasource-b.password=password
+spring.datasource-b.driver-class-name=org.h2.Driver
 
 # H2 Config
 spring.h2.console.enabled=true
