Added test environment that should help compare blaze implementation with `bee.persistent.jpa`

--- a/bee.persistent.test/src/main/resources/application.properties
+++ b/bee.persistent.test/src/main/resources/application.properties
@@ -37,6 +37,11 @@ spring.datasource-b.jdbcUrl=jdbc:h2:mem:b
 spring.datasource-b.username=sa
 spring.datasource-b.password=password
 spring.datasource-b.driver-class-name=org.h2.Driver
+# Datasource - Test
+spring.datasource-test.jdbcUrl=jdbc:h2:mem:test
+spring.datasource-test.username=sa
+spring.datasource-test.password=password
+spring.datasource-test.driver-class-name=org.h2.Driver
 
 # H2 Config
 spring.h2.console.enabled=true
