--- a/.github/workflows/github-actions.yaml
+++ b/.github/workflows/github-actions.yaml
@@ -21,6 +21,7 @@ jobs:
       - name: Make gradlew executable
         run: |
           chmod +x ./bee.persistent/gradlew
+          chmod +x ./bee.persistent.test/gradlew
           chmod +x ./bee.functional/gradlew
           chmod +x ./bee.functional.test/gradlew
           chmod +x ./bee.buzz/gradlew
