--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,13 +1,13 @@
 [versions]
 bee-built = "0.5.0-SNAPSHOT"
-springboot-base = "3.1.4"
-springboot-dependencymanagement = "1.1.3"
+springboot-base = "3.4.3"
+springboot-dependencymanagement = "1.1.7"
 kotlin-base = "1.9.25"
 kotlin-jvm = "1.9.25"
 dgs = "7.6.0"
-spring-security = "6.1.4"
+spring-security = "6.4.3"
 mapstruct = "1.5.3.Final"
-junit = "5.8.1"
+junit = "5.12.0"
 kotlinter = "3.13.0"
 dgs-codegen = "6.0.2"
 jackson-module-kotlin = "2.13.4"
@@ -17,7 +17,7 @@ michael-result = "1.1.18"
 jdsl = "2.2.0.RELEASE"
 aspectjrt = "1.9.19"
 jakarta-persistence-api = "3.1.0"
-hibernate-core = "6.2.9.Final"
+hibernate-core = "6.6.9.Final"
 caffeine = "3.1.2"
 springmockk = "4.0.2"
 datafaker = "1.14.0"
@@ -25,7 +25,7 @@ jakarta-mail-api = "2.0.1"
 jakarta-mail = "2.0.1"
 ksp-base = "1.9.25-1.0.20"
 bytebuddy = "1.14.9"
-blaze = "1.6.9"
+blaze = "1.6.14"
 
 [libraries]
 spring-boot-starter-test = { group = "org.springframework.boot", name = "spring-boot-starter-test", version.ref = "springboot-base" }
@@ -60,8 +60,12 @@ michael-result = { group = "com.michael-bull.kotlin-result", name = "kotlin-resu
 kotlin-reflect = { group = "org.jetbrains.kotlin", name = "kotlin-reflect", version.ref = "kotlin-base" }
 kotlin-stdlib = { group = "org.jetbrains.kotlin", name = "kotlin-stdlib-jdk8", version.ref = "kotlin-base" }
 kotlin-test = { group = "org.jetbrains.kotlin", name = "kotlin-test", version.ref = "kotlin-base" }
+# TODO 17: Remove junit-api + junit-engine
 junit-api = { group = "org.junit.jupiter", name = "junit-jupiter-api", version.ref = "junit" }
 junit-engine = { group = "org.junit.jupiter", name = "junit-jupiter-engine", version.ref = "junit" }
+junit-bom = { group = "org.junit", name = "junit-bom", version.ref = "junit" }
+junit-jupiter = { group = "org.junit.jupiter", name = "junit-jupiter" }
+junit-platform-launcher = { group = "org.junit.platform", name = "junit-platform-launcher" }
 jdsl = { group = "com.linecorp.kotlin-jdsl", name = "hibernate-kotlin-jdsl-jakarta", version = "2.2.0.RELEASE" }
 aspectjrt = { group = "org.aspectj", name = "aspectjrt", version = "1.9.19" }
 jakarta-persistence-api = { group = "jakarta.persistence", name = "jakarta.persistence-api", version = "3.1.0" }
