--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,7 +13,7 @@ multipart-spring-graphql = "1.5.3"
 jackson-module-kotlin = "2.18.2"
 h2 = "2.3.232"
 konform = "0.10.0"
-michael-result = "1.1.21"
+michael-result = "v1.1.22-SNAPSHOT"
 jdsl = "2.2.0.RELEASE"
 aspectjrt = "1.9.22.1"
 jakarta-persistence-api = "3.1.0" # Version determined by Hibernate + Spring Boot Starter Data JPA
@@ -56,7 +56,7 @@ multipart-spring-graphql = { group = "name.nkonev.multipart-spring-graphql", nam
 jackson-module-kotlin = { group = "com.fasterxml.jackson.module", name = "jackson-module-kotlin", version.ref = "jackson-module-kotlin" }
 h2 = { group = "com.h2database", name = "h2", version.ref = "h2" }
 konform = { group = "io.konform", name = "konform", version.ref = "konform" }
-michael-result = { group = "com.michael-bull.kotlin-result", name = "kotlin-result", version.ref = "michael-result" }
+michael-result = { group = "com.github.bee-produced.kotlin-result", name = "kotlin-result", version.ref = "michael-result" }
 kotlin-reflect = { group = "org.jetbrains.kotlin", name = "kotlin-reflect", version.ref = "kotlin-base" }
 kotlin-stdlib = { group = "org.jetbrains.kotlin", name = "kotlin-stdlib-jdk8", version.ref = "kotlin-base" }
 kotlin-test = { group = "org.jetbrains.kotlin", name = "kotlin-test", version.ref = "kotlin-base" }
